fix css spacing letters

--- a/pages/css/portfolio.css
+++ b/pages/css/portfolio.css
@@ -11,7 +11,7 @@
 
 .printbleedmini{
     font-family: "Inter", serif;
-    letter-spacing: -5px;
+    letter-spacing: -2px;
     font-size: 30px;
     text-align: center;  
 }
